--- a/001.html
+++ b/001.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">山西省</span>:招贤村---冀孝线---汾孝东收费站---G2516东吕高速---G2京沪高速---晋冀界：<br><hr><span id="pro">河北省</span>：冀晋界---G2516东吕高速---羊范收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">山西省</span>:招贤村---冀孝线---汾孝东收费站---G2516东吕高速---晋冀界：<br><hr><span id="pro">河北省</span>：冀晋界---G2516东吕高速---羊范收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
