--- a/002.html
+++ b/002.html
@@ -77,13 +77,13 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A3600002023091505603</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">湖北省，河南省</div></li>
+				<div class="detail-value " id="passDists">湖南省，广东省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2023年09月15日17时05分至 2023年09月25日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">湖北省</span>：顺源有限公司---S217---襄阳北收费站---G70福银高速---G55二广高速---鄂豫界；<br><hr><span id="pro">河南省</span>: 豫鄂界---G55二广高速---邓州新野收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">湖南省</span>：顺源有限公司---G537---蓝山收费站---G55二广高速---G0421许广高速---湘粤界；<br><hr><span id="pro">广东省</span>: 粤湘界---G0421许广高速---清远收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>湖北省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>河南省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>湖南省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>广东省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
